# CF_CG-Lib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  README.md  createMakeFileProject.sh  createUnixPythonProject.sh  createVisualStudioSolution.bat  createVisualStudioSolution_VS2015.bat  createVisualStudioSolution_VS2017.bat  createVisualStudioSolution_VS2019.bat  createVisualStudioSolution_VS2019_python.bat  createXCodeProject.sh  doxygen.conf  firstSteps.tex  functions.cmake  linuxInstaller.sh  linuxStartCLUCalc.sh  linux_installDependencies.sh  mac_installDependencies.sh  main.cpp  old_main.cpp  p3_3.py  windows_createDocumentation.bat
chaos_files/: .lin  Ant_2.ant  Ant_5.ant  Ant_6.ant  Ant_7.ant  Ant_8.ant  Ant_9.ant  BUSCH_01.GEN  BUSCH_02.GEN  BUSCH_03.GEN  BUSCH_04.GEN  Baum_3.ifs  Bigbang.ifs  Blatt_2.ifs  CANTORST.GEN  Chaos_ant.pal  Cos_03.orb  DRACH_F1.GEN  DRACH_F2.GEN  DRACH_K1.GEN  Deckch_1.orb  Deckchen_3_4tel.ifs  Doppelspirale.ifs  Drachen_kurve_2.lin  Drachenflaeche_4.ifs  Farn_1.ifs  Feigenb.orb  Filmstreifen.ifs  GEFRO_DR.GEN  GEFRO_QU.GEN  Galaxy.ifs  Gefrorenes_quadrat.lin  Henon.orb  Henon_1.orb  Henon_5.orb  Henon_6.orb  Hilbert_kurve.lin  Invers.ifs  KARO_PYR.GEN  KOCH_INS.GEN  (+30 more)
docker/: Dockerfile  test.sh
examples/: computerGeometry3D_example.cpp  computerGeometry_example.cpp  computerGeometry_example_2.cpp  gen_example.cpp  heightmap_example.cpp  heightmap_visualize_example.cpp  ifs_example.cpp  image_operations_example.cpp  lin_2D_example.cpp  lin_example.cpp  orb_example.cpp  small_examples.cpp  terrain.cpp  terrainGenerator_example.cpp  windowRasterized_example.cpp  windowVectorized_example.cpp  window_2D_example.cpp  window_2D_input_example.cpp  window_2D_intervall-input_example.cpp  window_2D_mouseinput_example.cpp  window_3D_example.cpp  window_3D_objectBased_advanced_example.cpp  window_3D_objectBased_example.cpp
ifs_files/: Ant_0.ant  Ant_1.ant  Ant_10.ant  Ant_11.ant  Ant_12.ant  Ant_13.ant  Ant_14.ant  Ant_3.ant  Ant_4.ant  Baum_3d_1.lin  Baum_3d_2.lin  Baum_4.ifs  Brezel_1.orb  Brezel_2.orb  Busch_1.ifs  Busch_1.lin  Busch_2.ifs  Busch_2.lin  Busch_3.lin  Busch_3d_2.lin  Busch_4.lin  Butterfly.ifs  Cos_01.orb  Cos_02.orb  Cos_04.orb  Cos_05.orb  Deckch_2.orb  Deckch_3.orb  Deckch_4.orb  Drachen_kurve_3.lin  Duerer_5_eck.ifs  Frosch.ifs  Gingerm.orb  Henon_4.orb  Henon_7.orb  Hilbert_kurve_3d.lin  Islands_and_Lakes.lin  Kissen_2.orb  Koch_insel.lin  Koch_kurve.lin  (+24 more)
include/: GEN.h  IFS.h  LSystem.h  ORB.h  computerGeometry.h  computerGeometry.hpp  computerGeometry3D.hpp  internal.hpp  uint128_t.h  utils.h  window.h  window2D.h  window3D.h  window3DObjectbased.h  windowCoordinateSystem.h  windowCoordinateSystem.hpp  windowCoordinateSystem3D.h  windowCoordinateSystem3D.hpp  windowRasterized.h  windowRasterized.hpp  windowVectorized.h  windowVectorized.hpp  windowVercorized.h  windowVercorized.hpp
python/: CF_1_1_template.py  CF_1_2a_template.py  CF_1_2b_template.py  CF_1_3_template.py  CF_1_4_template.py  computerGeometry.py  computerGeometry_example.py  firstSteps_WinPython.tex  firstSteps_python.aux  firstSteps_python.out  firstSteps_python.tex  gen_example.py  heightmap_example.py  heightmap_visualize_example.py  helper.py  ifs_example.py  lin_example.py  orb_example.py  small_examples.py  windowRasterized_example.py  windowVectorized_example.py
python/installFiles/: test.bat
python_examples/: computerGeometry.py
src/: GEN.cpp  IFS.cpp  LSystem.cpp  ORB.cpp  computerGeometry.cpp  utils.cpp  window.cpp  window2D.cpp  window3D.cpp  window3DObjectbased.cpp  windowCoordinateSystem.cpp  windowCoordinateSystem3D.cpp  windowRasterized.cpp  windowVectorized.cpp
swig/: CMakeLists.txt  cf.i  test.py
test/: CMakeLists.txt  computerGeometry3D_test.cpp
